# sup-invoices-service-api

./: .editorconfig  .env.example  .env.local  .gitignore  Dockerfile  Pipfile  README.md  build.jenkinsfile  docker-compose.yml  pyproject.toml
.cursor/rules/: database-schema.mdc  project-overview.mdc  service-dependencies.mdc
docs/: DATABASE_CONNECTION_FIX.md  DOCKER_MYSQL_FIX.md  DOCKER_PORT_3306_FIX.md  ENVIRONMENT.md  FEATURES.md  MYSQL_DOCKER_TROUBLESHOOTING.md  MYSQL_IN_DOCKER_FIX.md  PO_JOB_ID_FIX.md  RUNNING_THE_SERVICE.md  TROUBLESHOOTING.md  changelog.md
src/: config.py  database.py  main.py  middleware.py  models.py  pagination.py  redis.py
src/example/: router.py  schemas.py  service.py
src/health/: router.py  schemas.py
src/invoices/: __init__.py  auth.py  dependencies.py  enums.py  models.py  permissions.py  router.py  schemas.py  service.py  workflow.py
src/salesorders/: __init__.py  dependencies.py  enums.py  permissions.py  router.py  schemas.py  service.py
tests/: conftest.py  test_app.py
tests/integration/: test_invoices_api.py
tests/invoices/: __init__.py  test_router.py  test_service.py
tests/purchase_orders/: __init__.py  test_service.py
tests/salesorders/: __init__.py  test_service.py
tests/workflow/: test_workflow.py
